# netbox-opennms-plugin

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  Makefile  README.md  compose.integration.yml  compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: index.html  quickstart.html  quickstart.md  style.css
examples/quickstart/: README.md  compose.yml
examples/quickstart/configuration/: plugins.py
netbox_opennms/: __init__.py  catalog.py  choices.py  derivation.py  dryrun.py  enrichment.py  filtersets.py  forms.py  jobs.py  membership.py  models.py  navigation.py  presets.py  signals.py  tables.py  template_content.py  urls.py  validation.py  views.py
netbox_opennms/api/: __init__.py  serializers.py  urls.py  views.py
netbox_opennms/client/: __init__.py  client.py  discovery.py  errors.py
netbox_opennms/migrations/: 0001_initial.py  0002_monitoringprofile_management_ip.py  0002_requisition_redesign.py  0003_deployedforeignsource.py  0003_monitoringprofile_additional_ips.py  0004_monitoredservice.py  0004_remove_requisition_priority.py  0005_monitoringprofile_location.py  0005_remove_monitoringoverride_additional_ips_and_more.py  0006_assetmapping_metadataentry.py  0006_monitoringprofile_last_synced_foreign_source.py
netbox_opennms/templates/netbox_opennms/: assetmapping.html  connection_test.html  dry_run.html  metadataentry.html  monitoredinterface.html  monitoredservice.html  monitoringassignment.html  monitoringdetector.html  monitoringoverride.html  monitoringpolicy.html  monitoringprofile.html  monitoringprofile_list.html  requisition.html  sync_preview.html
netbox_opennms/templates/netbox_opennms/inc/: sync_status_panel.html
netbox_opennms/tests/: __init__.py  query_counts.json  test_api.py  test_catalog.py  test_client.py  test_connection.py  test_derivation.py  test_dryrun.py  test_enrichment.py  test_forms.py  test_integration.py  test_integration_refocus.py  test_jobs.py  test_membership.py  test_models.py  test_observability.py  test_packaging.py  test_plugin.py  test_requisition_detail.py  test_sync.py  test_translation.py  test_validation.py  test_views.py
netbox_opennms/translation/: __init__.py  requisition.py
quickstart/: README.md  compose.yml  seed.py  seed.sh
quickstart/configuration/: plugins.py
tests/config/: plugins.py
