[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "netbox-opennms-plugin"
version = "0.1.0"
description = "Provision NetBox devices and virtual machines into OpenNMS via the REST provisioning API."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Ronny Trommer", email = "ronny@no42.org" }]
keywords = ["netbox", "netbox-plugin", "opennms", "provisioning", "monitoring"]
classifiers = [
    "Framework :: Django",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
# Runtime deps are added by the stories that need them (XML rendering / lxml:
# Story 1.6). NetBox itself is the host application and is NOT declared here.
dependencies = [
    "requests>=2.34",
]

[project.urls]
Source = "https://github.com/no42-org/netbox-onms"
Tracker = "https://github.com/no42-org/netbox-onms/issues"

[tool.setuptools.packages.find]
include = ["netbox_opennms*"]
exclude = ["netbox_opennms.tests*"]

[tool.ruff]
target-version = "py312"
line-length = 88
extend-exclude = ["*/migrations/*"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
